[tool.poetry]
name = "poetry-new-hello"
version = "0.1.0"
description = ""
authors = ["ShlomiBilgory <shlomi.bilgory@whitesourcesoftware.com>"]

[tool.poetry.dependencies]
python = "^3.7"
urllib3 = "1.19"
bleach = "1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"