[tool.poetry]
name = "poetry-new-hello"
version = "0.1.0"
description = ""
authors = ["ShlomiBilgory <shlomi.bilgory@whitesourcesoftware.com>"]

[tool.poetry.dependencies]
urllib3 = "1.19"
bleach = "1.0.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
python = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
